--- a/index.html
+++ b/index.html
@@ -11,24 +11,53 @@
 
 </head>
 
-<body>
+<body ng-app="censusVisuals" ng-controller="VisualsController">
     <main>
         <header>
         </header>
-        <div class="container background" ng-click="">
+        <div class="container background">
             <h1>US Census Visuals!</h1>
-<!--            <h2>Learn from the US Census!</h2>-->
-<!--            <h3>Ever wonder what the census actually tells us?</h3>-->
+            <!--            <h2>Learn from the US Census!</h2>-->
+            <!--            <h3>Ever wonder what the census actually tells us?</h3>-->
             <h4>Ever wonder what the census actually tells us?</h4>
-<!--            <h5>This is a title!</h5>-->
+            <!--            <h5>This is a title!</h5>-->
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="btn-group">
+                        <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button">Years<span class="caret"></span>
+                        </button>
+                        <ul role="menu" class="dropdown-menu">
+                            <li><a href="#">2010</a>
+                            </li>
+                            <li><a href="#">2000</a>
+                            </li>
+                            <li><a href="#">1990</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="btn-group">
+                        <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle" type="button">{{button1}}<span class="caret"></span>
+                        </button>
+                        <ul role="menu" class="dropdown-menu scroll">
+                            <li ng-repeat="state in states" ng-click="switchGenderGraph('button1', state)"><a href="#">{{state}}</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <section id="graph"></section>
+            </div>
         </div>
+
     </main>
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"></script>
     <script src="https://code.angularjs.org/1.3.9/angular.min.js"></script>
+    <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="js/lodash.min.js"></script>
-    <script src="app/app.js"></script>
+    <script src="js/data.js"></script>
+    <script src="js/graph.js"></script>
 
+    <script src="app/app.js"></script>
 </body>
 
 </html>
